# apex

./: .gitignore  FIXME.md  README.md  apex.yaml.example  pyproject.toml
data/filler/: filler_neutral_seed.json
data/probes/: probes_application_seed.json  probes_factual_recall_seed.json  probes_salience_seed.json
docs/: setup.md
docs/implementation/: apex_cc_brief.md
scripts/: dashboard.sh  run.sh
src/apex/: __init__.py  __main__.py  assembler.py  calibration.py  calibration_store.py  cli.py  config.py  db.py  libraries.py  migrate.py  runner.py  storage.py  tokenizers.py  types.py
src/apex/dashboard/: __init__.py  app.py  config.py  export.py  queries.py  styles.py
src/apex/dashboard/assets/: checklists.css  dropdowns.css
src/apex/dashboard/services/: __init__.py  infra.py  model_catalog.py  process_manager.py
src/apex/dashboard/views/: __init__.py  calibration.py  context_scaling.py  cross_model.py  curve_explorer.py  dimension_comparison.py  infrastructure.py  probe_detail.py  run_control.py  run_monitor.py  settings.py  summary.py
src/apex/models/: __init__.py  anthropic.py  base.py  google.py  llamacpp.py  ollama.py  openai.py  sglang.py
src/apex/scoring/: __init__.py  base.py  evaluator.py  exact_match.py  programmatic.py  semantic.py
tests/: conftest.py  test_assembler.py  test_calibration.py  test_config.py  test_dashboard.py  test_delete.py  test_libraries.py  test_rescore.py  test_runner.py  test_scoring.py  test_storage.py  test_tokenizers.py
