[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex"
version = "1.1.0"
description = "Attention Profiling and Empirical Cross-model Optimization"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "tiktoken>=0.7",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "tqdm>=4.66",
    "psycopg[binary]>=3.1",
]

[project.scripts]
apex = "apex.cli:main"

[project.optional-dependencies]
dashboard = [
    "dash>=2.17",
    "plotly>=5.22",
    "pandas>=2.1",
    "kaleido>=0.2",
    "psutil>=5.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
